# pg-restore-tool

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  backup_engine.py  backup_scanner.py  capability_matrix.py  config.py  connection.py  database_ops.py  env_check.py  pg_detector.py  post_restore.py  restore_engine.py
profiles/: profile_manager.py
ui/: tui.py
utils/: logger.py
