[project]
name = "pg-restore-tool"
version = "1.0.0"
description = "CLI/TUI tool for restoring PostgreSQL backups without opening pgAdmin"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pg-restore = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true